--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,6 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/main.min.css" />
-    
   </head>
 
   <body>
@@ -95,7 +94,7 @@
               <a class="card-link link" href="#">
                 <div class="project-thumb">
                   <img
-                    src="./images/project1.jpg"
+                    src="./images/project1-desk.jpg"
                     alt="Екран ноутбука з відкритим сайтом"
                     width="370"
                     height="294"
@@ -117,7 +116,7 @@
               <a class="card-link link" href="#">
                 <div class="project-thumb">
                   <img
-                    src="./images/project2.jpg"
+                    src="./images/project2-desk.jpg"
                     alt="Двоє баскетболістів підстрибують з м`ячем"
                     width="370"
                     height="294"
@@ -140,7 +139,7 @@
               <a class="card-link link" href="#">
                 <div class="project-thumb">
                   <img
-                    src="./images/project3.jpg"
+                    src="./images/project3-desk.jpg"
                     alt="Логотип ресторану морської кухні"
                     width="370"
                     height="294"
@@ -163,7 +162,7 @@
               <a class="card-link link" href="#">
                 <div class="project-thumb">
                   <img
-                    src="./images/project4.jpg"
+                    src="./images/project4-desk.jpg"
                     alt="Безпровідні навушники"
                     width="370"
                     height="294"
@@ -186,7 +185,7 @@
               <a class="card-link link" href="#">
                 <div class="project-thumb">
                   <img
-                    src="./images/project5.jpg"
+                    src="./images/project5-desk.jpg"
                     alt="Дві коробки більша білого кольору а менша бежевого"
                     width="370"
                     height="294"
@@ -209,7 +208,7 @@
               <a class="card-link link" href="#">
                 <div class="project-thumb">
                   <img
-                    src="./images/project6.jpg"
+                    src="./images/project6-desk.jpg"
                     alt="Монітор макбука з інфографікою"
                     width="370"
                     height="294"
@@ -232,7 +231,7 @@
               <a class="card-link link" href="#">
                 <div class="project-thumb">
                   <img
-                    src="./images/project7.jpg"
+                    src="./images/project7-desk.jpg"
                     alt="Відкритий журнал з фотографіями та стильною типографікою"
                     width="370"
                     height="294"
@@ -256,7 +255,7 @@
               <a class="card-link link" href="#">
                 <div class="project-thumb">
                   <img
-                    src="./images/project8.jpg"
+                    src="./images/project8-desk.jpg"
                     alt="Біла етикетка з написом прямокутної форми на шнурку"
                     width="370"
                     height="294"
@@ -279,7 +278,7 @@
               <a class="card-link link" href="#">
                 <div class="project-thumb">
                   <img
-                    src="./images/project9.jpg"
+                    src="./images/project9-desk.jpg"
                     alt="Пальці людини набирають на ноутбуці текст"
                     width="370"
                     height="294"
